--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "usehope",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "The open source application that encourages blood donation, informing the nearest donation places, connecting you to those who need help.",
   "homepage": "https://usehope.org",
   "repository": "usehope/usehope",
@@ -18,8 +18,7 @@
     "repository",
     "github"
   ],
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "ava": "^3.11.0",
     "husky": "^4.2.5",
